<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvUserStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginBottom="32dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCheckServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_server_button"
            android:layout_marginBottom="16dp"
            style="?attr/materialButtonOutlinedStyle" />

        <Button
            android:id="@+id/btnGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_login" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            style="?attr/materialButtonOutlinedStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>